--- a/index.html
+++ b/index.html
@@ -4,20 +4,19 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>CodeSecure - Login & Register</title>
-  <link rel="stylesheet" href="/stylesheets/loginregister.css" />
-  <link rel="stylesheet" href="/stylesheets/loginregister-additional.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="main-container">
     <header class="header-section">
       <div class="brand-logo">CodeSecure</div>
       <nav class="navigation-menu">
-        <a href="/" class="nav-link">Home</a>
-        <a href="/about" class="nav-link">About</a>
-        <a href="/contact" class="nav-link">Contact</a>
+        <a href="#" class="nav-link">Home</a>
+        <a href="#" class="nav-link">About</a>
+        <a href="#" class="nav-link">Contact</a>
       </nav>
       <div class="user-actions">
-        <a href="/request-hosting" class="action-btn">Request Hosting</a>
+        <a href="#" class="action-btn">Request Hosting</a>
       </div>
     </header>
 
@@ -84,7 +83,7 @@
                 <input type="email" class="form-input" id="registerEmail" placeholder="Enter your email" required>
               </div>
               <div class="form-group">
-                <label class="form-labuth-Password</label>
+                <label class="form-label">Password</label>
                 <input type="password" class="form-input" id="registerPassword" placeholder="Create a password" required>
               </div>
               <div class="form-group">
@@ -150,25 +149,13 @@
         <div class="footer-links">
           <div class="footer-column">
             <h4 class="footer-title">Platform</h4>
-            <a href="/about" class="footer-link">About</a>
-            <a href="/features" class="footer-link">Features</a>
-            <!-- <a href="/security" class="footer-link">Security</a>
-            <a href="/pricing" class="footer-link">Pricing</a> -->
+            <a href="#" class="footer-link">About</a>
+            <a href="#" class="footer-link">Features</a>
           </div>
           <div class="footer-column">
             <h4 class="footer-title">Support</h4>
-            <a href="/contact" class="footer-link">Contact</a>
-            <!-- <a href="/help" class="footer-link">Help Center</a>
-            <a href="/docs" class="footer-link">Documentation</a>
-            <a href="/api" class="footer-link">API</a> -->
+            <a href="#" class="footer-link">Contact</a>
           </div>
-          <!-- <div class="footer-column">
-            <h4 class="footer-title">Company</h4>
-            <a href="/careers" class="footer-link">Careers</a>
-            <a href="/blog" class="footer-link">Blog</a>
-            <a href="/press" class="footer-link">Press</a>
-            <a href="/legal" class="footer-link">Legal</a>
-          </div> -->
         </div>
       </div>
       <div class="footer-bottom">
@@ -177,7 +164,6 @@
     </footer>
   </div>
 
-  <script src="/javascripts/loginregister.js"></script>
-
+  <script src="script.js"></script>
 </body>
 </html>
